--- a/static/index.html
+++ b/static/index.html
@@ -53,10 +53,10 @@
 					</div>
 				</div>
 				<div id="playlist-empty" style="display:none">
-					<h3 data-i18n="noentries">No entries in the playlist</h3>
+					<h3 data-i18n="playlist.empty">No entries in the playlist</h3>
 				</div>
 				<div id="playlist-playing" style="display:none;">
-					<h3>Now Playing</h3>
+					<h3 data-i18n="playlist.now">Now Playing</h3>
 					<div id="seek-controls" data-role="navbar" class="ui-body-b">
 						<ul>
 							<li><a href="#" data-role="button" data-i18n-att="title" data-i18n="btn.seek.back.long" title="seek back 10m" data-player-action="seekbacklarge" class="active-on-playing ui-disabled">&lt;&lt;</a></li>
@@ -82,7 +82,7 @@
 				</div>
 				<div id="spinnercontainer" class="spinnercontainer">
 					<div id="spinner" class="spinner" style="opacity: 1;">
-						<img id="img-spinner" src="images/spinner.gif" alt="Loading"/><span data-i18n="refreshing">...refreshing playlist...</span>
+						<img id="img-spinner" src="images/spinner.gif" alt="Loading"/><span data-i18n="playlist.refreshing">...refreshing playlist...</span>
 					</div>
 				</div>
 			</div>
